Changelog
=========

2.13.1 (unreleased)
-------------------

- Avoid pre-allocation of marker items in `LazyMap.

2.13.0 (2010-12-25)
-------------------

- Fix `LazyMap` to avoid unnecessary function calls.

- Released as separate distribution.